--- a/camping.html
+++ b/camping.html
@@ -17,7 +17,7 @@
   <body>
 
     <!-- Preloader -->
-<!--     <div id="preloader">
+    <!-- <div id="preloader">
       <div id="status">&nbsp;</div>
     </div> -->
 
@@ -87,25 +87,118 @@
       </div>
 
     
-    <div class="container-fluid bg-light pb-5">
+    <div class="container-fluid bg-light">
       <div class="container singlepage-info">
         <div class="jumbotron rounded-0 p-0 text-center">
           <div class="pageImg">
-            <img src="https://dport.daihatsu.co.jp/car/wake/assets/img/hero/bnr-camping_magic1.jpg" alt="">
+            <img src="https://dport.daihatsu.co.jp/car/wake/assets/img/hero/bnr-camping_magic1.jpg" width="550" alt="">
           </div>
         </div>
       </div>
+    </div>
 
+    <div id="categories" class="container-fluid">
       <div class="container">
         <nav>
           <div class="row">
-            <div class="col text-center bg-white p-5">Category 1</div>
-            <div class="col text-center bg-white p-5">Category 2</div>
-            <div class="col text-center bg-white p-5">Category 3</div>
-            <div class="col text-center bg-white p-5">Category 4</div>
+            <div class="row inner-categories">
+              <div class="col-2 text-center py-5 active">
+                <div class="categories-icons">
+                  <i class="fa fa-home" aria-hidden="true"></i>
+                  <p>ALL</p>
+                  <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                </div>
+              </div>
+              <div class="col-2 text-center py-5">
+                <div class="categories-icons">
+                  <i class="fa fa-comments" aria-hidden="true"></i>
+                  <p>VOICE</p>
+                  <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                </div>
+              </div>
+              <div class="col-2 text-center py-5">
+                <div class="categories-icons">
+                  <i class="fa fa-snowflake-o" aria-hidden="true"></i>
+                  <p>CM</p>
+                  <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                </div>
+              </div>
+              <div class="col-2 text-center py-5">
+                <div class="categories-icons">
+                  <i class="fa fa-calendar-check-o" aria-hidden="true"></i>
+                  <p>EVENT/REPORT</p>
+                  <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                </div>
+              </div>
+              <div class="col-2 text-center py-5">
+                <div class="categories-icons">
+                  <i class="fa fa-phone" aria-hidden="true"></i>
+                  <p>SATSUKI</p>
+                  <i class="fa fa-chevron-down" aria-hidden="true"></i>
+                </div>
+              </div>
+            </div>
+          </div><hr class="m-0">
+          <div class="announcement-text p-3 text-center">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, consectetur. Maxime illum facilis maiores?</p>
           </div>
         </nav>
       </div>
+    </div>
+
+    <div id="category-boxes">
+        <div class="container">
+          <div class="row text-center">
+            <div class="box col-xs-12 col-sm-3">
+              <div class="box-inner">
+                <div class="box-thumb">
+                  <img src="/dist/src/img/barbecue.jpg" width="100%" alt="">
+                </div>
+                <div class="box-content px-4 py-4 text-left">
+                  <h3>Lorem ipsum dolor sit.</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt voluptate aspernatur consequuntur, rerum harum praesentium?</p>
+                  <span class="inBox-date">22.12.2018</span>
+                </div>
+              </div>
+            </div>
+            <div class="box col-xs-12 col-sm-3">
+              <div class="box-inner">
+                <div class="box-thumb">
+                  <img src="/dist/src/img/barbecue.jpg" width="100%" alt="">
+                </div>
+                <div class="box-content px-4 py-4 text-left">
+                  <h3>Lorem ipsum dolor sit.</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo omnis deleniti quibusdam sint recusandae tempora!</p>
+                  <span class="inBox-date">22.12.2018</span>
+                </div>
+              </div>
+            </div>
+            <div class="box col-xs-12 col-sm-3">
+              <div class="box-inner">
+                <div class="box-thumb">
+                  <img src="/dist/src/img/barbecue.jpg" width="100%" alt="">
+                </div>
+                <div class="box-content px-4 py-4 text-left">
+                  <h3>Lorem ipsum dolor sit.</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae, vero hic adipisci nulla molestias eveniet.</p>
+                  <span class="inBox-date">22.12.2018</span>
+                </div>
+              </div>
+            </div>
+            <div class="box col-xs-12 col-sm-3">
+              <div class="box-inner">
+                <div class="box-thumb">
+                  <img src="/dist/src/img/barbecue.jpg" width="100%" alt="">
+                </div>
+                <div class="box-content px-4 py-4 text-left">
+                  <h3>Lorem ipsum dolor sit.</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error itaque ea earum eius, incidunt, eligendi.</p>
+                  <span class="inBox-date">22.12.2018</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
 
 
